--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -38,6 +38,15 @@
       </div>
 
     </div>
-  </body>
+    <script src="/static/jquery-3.5.0.js"></script>
+    <script src="/static/list.js"></script>
 
+    <script>
+
+    $( document ).ready( function ( ) {
+      window.Superlists.initialize( ) ;
+    } ) ;
+
+    </script>
+  </body>
 </html>
